syntax = "proto3";

package GophKeeper.server.proto;

option go_package = "github.com/boginskiy/GophKeeper/server/internal/rpc";

service ByterService {
  rpc Upload (stream UploadBytesRequest) returns (UploadBytesResponse);
  rpc Unload (UnloadBytesRequest) returns (stream UnloadBytesResponse);
}

message UploadBytesRequest {
  bytes content = 1;
}

message UploadBytesResponse {
  string status = 1;
  string updatedAt = 2;
  string sent_file_size = 3;
  string received_file_size = 4;
}

message UnloadBytesRequest {
}

message UnloadBytesResponse {
  bytes content = 1;
}
