syntax = "proto3";

package GophKeeper.server.proto;

option go_package = "github.com/boginskiy/GophKeeper/server/internal/rpc";

service TexterService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc ReadAll (ReadAllRequest) returns (ReadAllResponse);
  rpc Update (CreateRequest) returns (CreateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message TextResponse {
  string name = 1;
  string text = 2;
  string updatedAt = 3;
}

message CreateRequest {
  string name = 1;
  string type = 2;
  string text = 3;
  string owner = 4;
  repeated int64 listActivate = 5;
}

message CreateResponse {
  string status = 1;
  string updatedAt = 2;
}

message ReadRequest {
  string name = 1;
  string owner = 2;
}

message ReadResponse {
  string status = 1;
  string name = 2;
  string text = 3;
  string updatedAt = 4;
}

message ReadAllRequest {
  string type = 1;
  string owner = 2;
}

message ReadAllResponse {
  string status = 1;
  repeated TextResponse textResponses = 2;  
}

message DeleteRequest {
  string name = 1;
  string owner = 2;
}

message DeleteResponse {
  string status = 1;
  string name = 2;
}
